--- a/pom.xml
+++ b/pom.xml
@@ -55,5 +55,11 @@
             <version>1.0</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>com.mycompany</groupId>
+            <artifactId>Operator</artifactId>
+            <version>1</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 </project>
